deploy/gke/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jobsrss
  labels:
    app.kubernetes.io/name: jobsrss
