deploy/gke/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jobsrss
  namespace: default
  labels:
    app.kubernetes.io/name: jobsrss
spec:
  parentRefs:
    - name: demo-gateway
      namespace: default
      kind: Gateway
  hostnames:
    - jobsrss.vincentspace.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /healthz
      backendRefs:
        - name: api
          namespace: jobsrss
          port: 8000
    - matches:
        - path:
            type: PathPrefix
            value: /jobs
      backendRefs:
        - name: api
          namespace: jobsrss
          port: 8000
    - matches:
        - path:
            type: PathPrefix
            value: /rss
      backendRefs:
        - name: api
          namespace: jobsrss
          port: 8000
    - matches:
        - path:
            type: PathPrefix
            value: /sources
      backendRefs:
        - name: api
          namespace: jobsrss
          port: 8000
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend
          namespace: jobsrss
          port: 80
